[package]
name = "logic"
version = "0.1.0"
authors = ["Nils Martel <akantorabc@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.0-beta2"           # A byte-oriented, zero-copy, parser combinators library
